--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <meta name="description" content="Kde se světlo setká s emocí. Záclony, závěsy, rolety a jemné esence.">
   <meta name="theme-color" content="#f1ece7" />
 
-  <script src="https://cdn.tailwindcss.com"></script>
+<script src="app.js?v=20260129"></script>
+
   <link rel="stylesheet" href="./style.css" />
 </head>
 
