--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Kde se světlo setká s emocí. Záclony, závěsy, rolety a jemné esence.">
   <meta name="theme-color" content="#f1ece7" />
 
-  <!-- ✅ Tohle ti vrátí „tailwind-like“ třídy (hidden, md:flex, px-4, atd.) -->
+  <!-- tailwind-like utility classes -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <link rel="stylesheet" href="./style.css" />
@@ -25,7 +25,7 @@
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-  <!-- ✅ app.js načti jen jednou + vždy čerstvý (bez ručního přepisování) -->
+  <!-- app.js načti jen jednou + vždy čerstvý -->
   <script>
     (function () {
       var s = document.createElement("script");
@@ -36,6 +36,5 @@
   </script>
 </body>
 </html>
-
 
 
