--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
 <body class="reveal">
   <div id="root"></div>
 
-  <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+  <!-- ✅ i18n musí být dřív než app.js -->
+  <script src="./i18n.js"></script>
 
   <!-- app.js načti jen jednou + vždy čerstvý -->
   <script>
