--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
   <!-- ✅ i18n musí být dřív než app.js -->
-  <script src="./i18n.js"></script>
+  <script src="./i18n/i18n.js?cb=1"></script>
 
   <!-- app.js načti jen jednou + vždy čerstvý -->
   <script>
